--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
@@ -5,7 +5,8 @@ div(tabindex=0)
         data-on-cancel="onCancel()",
         data-on-commit="onCommit()"
         data-on-change="onChange()"
-        data-input-text="inputText"
+        data-input-text="inputText",
+        data-placeholder="placeholder"
     )
     div(data-tribe-singleselect-available,
         data-active="optionsActivated",
