--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -1,4 +1,16 @@
 .components
+    div(data-tribe-singleselect,
+        data-new-label="New Item",
+        data-editable="true",
+        data-selected-option="null",
+        data-placeholder="Nothing",
+        data-available-options="['aaaa', 'aaa', 'aa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+
+    div(data-tribe-singleselect,
+        data-new-label="New Item",
+        data-selected-option="'aaaa'",
+        data-available-options="['aaaa', 'aaa', 'aa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+
     div
         label markdown
         div(data-tribe-markdown, data-value="'lalala'")
