[REG-262] Added "create application" button, "Save" and history for applications and "Create endpoint" on application page.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header_create_btn.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header_create_btn.jade
@@ -1,7 +1,11 @@
 div
   .button-face
     div
-      span Create
+      a(x-ng-href="application") 
+        span Create Application
+  .button-face
+    div
+      span Create Endpoint
     div.trigger
       i.fa.fa-caret-down
   .button-applications.floating-menu
