--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -3,7 +3,7 @@ div(tabindex=0, title="Click to edit")
         .text
             input(type="{{type ? type : 'text'}}", x-ng-keyup="keyEntered($event);", x-ng-model="value")
             span(x-ng-if="value") {{value}}
-            span.empty(x-ng-if="!value") Empty
+            span.empty(x-ng-if="!value") {{placeholder ? placeholder : Empty}}
         .edit-icon
             i.fa.fa-pencil
     div(data-tribe-field-actions,
