REG-217 moving to webpack

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header.sass
@@ -19,8 +19,11 @@ div[data-app-endpoints-header]
       display: flex
       align-items: center
       flex-wrap: wrap
-      > img
-        width: auto
+      > div.img
+        background: url("../images/services-icon.png") center
+        background-size: contain
+
+        width: 35px
         height: 35px
       > span
         text-transform: uppercase
