--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_header.sass
@@ -12,8 +12,10 @@ div[data-app-header]
       flex-shrink: 0
       width: $app-top-icon-width
       height: 55px
-      > img
-        width: auto
+      > div.img
+        background: url("../images/header_iii.png") center
+        background-size: contain
+        width: 25px
         height: 25px
     > div:first-of-type
       background-color: #34373c
