--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
@@ -1,6 +1,6 @@
 header
   a(href=".")
-    img(src="app/images/header_iii.png", title="Registry")
+    div.img(title="Registry")
   div
     span Registry
   div
