--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_login.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_login.jade
@@ -1,7 +1,7 @@
 .app-login(app-login)
   div
   form(x-ng-submit="login()")
-    img(src="app/images/logo-header-login.svg")
+    div.img
     h1 Welcome to Registry.
     h2 Login to see it in action.
     div
