--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_page_login.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_page_login.sass
@@ -23,13 +23,13 @@ div.app-login
     bottom: 0
     top: 0
     background-size: cover
-    background: url("../../app/images/login-background-1920X1200.jpg") no-repeat center center fixed
+    background: url("../images/login-background-1920X1200.jpg") no-repeat center center fixed
     @media (max-width: 1280px)
-      background-image: url("../../app/images/login-background-1280x950.jpg")
+      background-image: url("../images/login-background-1280x950.jpg")
     @media (max-width: 320px) and (max-height: 568px)
-      background-image: url("../../app/images/login-background-320x568.jpg")
+      background-image: url("../images/login-background-320x568.jpg")
     @media (max-height: 320px) and (max-width: 568px)
-      background-image: url("../../app/images/login-background-568x320.jpg")
+      background-image: url("../images/login-background-568x320.jpg")
   > footer
     margin-top: $default-padding * 3
     > div
@@ -47,9 +47,11 @@ div.app-login
     width: 450px
     @media (max-width: $shrink-width-threshold)
       width: 100%
-    > img
-      width: 100%
-      height: auto
+    > div.img
+      background: url("../images/logo-header-login.svg") center no-repeat
+      background-size: contain
+      max-width: 600px
+      height: 100px
     > div
       width: 100%
       display: flex
