--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -22,7 +22,7 @@ html
 div.app-loading
   width: 100%
   height: 100%
-  background: url("../../app/images/loading.gif") center no-repeat
+  background: url("../images/loading.gif") center no-repeat
 
 div[data-app]
   > div
