--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
@@ -1,6 +1,6 @@
 div
   h1
-    img(src="app/images/services-icon.png")
+    div.img
     span Services found
     span ({{total}})
   i(data-app-endpoints-query-input)
