[REG-271] Added delete buttons for applications and endpoints.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -11,6 +11,7 @@ div
             div
               a(x-ng-href="endpoint/{{humanReadableName}}") 
                 span Create Endpoint
+      i.fa.fa-trash(x-ng-if="applicationLink", x-ng-click="delete()")
     article
       div
         h1
