--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -79,6 +79,7 @@ div.tribe-add-btn
 @import "component_text"
 @import "component_tabs"
 @import "component_field_actions"
+@import "component_confirm_btn"
 
 @import "app_header"
 @import "app_footer"
