--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -11,7 +11,7 @@ div
             div
               a(x-ng-href="endpoint/{{humanReadableName}}") 
                 span Create Endpoint
-      i.fa.fa-trash(x-ng-if="applicationLink", x-ng-click="delete()")
+      div(data-tribe-confirm-btn, data-callback="delete", data-icon="trash", data-message="Do you want to delete this application?", x-ng-if="applicationLink")
     article
       div
         h1
