REG-274 minor adjustements

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_confirm_btn.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_confirm_btn.sass
@@ -14,9 +14,10 @@ div[data-tribe-confirm-btn]
     justify-content: center
     align-items: center
     > div
+      max-width: 600px
       background-color: #ffffff
       > div
-        padding: 20px 30px
+        padding: 20px 80px
         display: flex
         flex-direction: column
         align-items: center
@@ -33,6 +34,8 @@ div[data-tribe-confirm-btn]
           font-size: 40px
           color: #c51d1c
         p
+          text-align: center
+          text-transform: uppercase
           margin: 15px 0 0 0
           font-weight: 700
         border-bottom: solid #f9f9f9 1px
