REG-280 new component created

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -80,6 +80,7 @@ div.tribe-add-btn
 @import "component_tabs"
 @import "component_field_actions"
 @import "component_confirm_btn"
+@import "component_diff"
 
 @import "app_header"
 @import "app_footer"
