--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_history.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_history.jade
@@ -25,7 +25,7 @@ div(ng-show="history")
               span {{historyItem.usercomment}}
             td
               i.fa.fa-edit(x-ng-click="showHistoricEndpoint(historyItem)")
-    div(id="history-diff", x-ng-show="showDiff && selected.length == 2")
+    div(data-tribe-diff, x-ng-show="showDiff && selected.length == 2", data-value-a="valueA", data-value-b="valueB")
   button.orange(x-ng-click="closeHistory()") Close
   button(x-ng-click="doDiff()", x-ng-show="showDiff") Hide Diff
   button(x-ng-click="doDiff()", x-ng-show="!showDiff") Show Diff
