REG-292 new component created

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -1,4 +1,6 @@
 .components
+    div(data-tribe-diff, data-value-a="valueA", data-value-b="valueB")
+
     div(data-tribe-singleselect,
         data-new-label="New Item",
         data-editable="true",
