--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_confirm_btn.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_confirm_btn.jade
@@ -1,6 +1,7 @@
 div
     .trigger
         i(class="fa fa-{{icon}}")
+        span(x-ng-if="label") {{label}}
     .confirmation-popup
         div
             div
