--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -8,15 +8,19 @@ div
         a(x-ng-href="application/{{applicationName}}?version={{swagger.info.version}}") {{swagger.info.title}} {{swagger.info.version}}
       .buttons
         .save(x-ng-if="applicationLink" x-ng-click="save()")
+          i.fa.fa-floppy-o
           span Save
         .create-application(x-ng-if="applicationsLink" x-ng-click="create()")
+          i.fa.fa-plus
           span Create Application
         .create-endpoint
+          i.fa.fa-plus
           a(x-ng-href="endpoint/{{humanReadableName}}")
             span Create Endpoint
         .history(x-ng-if="historyLink" x-ng-click="showHistory()")
+          i.fa.fa-history
           span Show History
-        .delete(data-tribe-confirm-btn, data-callback="delete", data-icon="trash", data-message="Are you sure you want to delete this application?", x-ng-if="applicationLink")
+        .delete(data-tribe-confirm-btn, data-callback="delete", data-icon="trash", data-message="Are you sure you want to delete this application?", x-ng-if="applicationLink", data-label="Delete Application")
     article.content
       div
         h1
