REG-292 moving variables out of ts code

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -1,5 +1,5 @@
 .components
-    div(data-tribe-diff, data-value-a="valueA", data-value-b="valueB")
+    div(data-tribe-diff, data-value-a="'value a'", data-value-b="'value b'")
 
     div(data-tribe-singleselect,
         data-new-label="New Item",
