REG-280 new table style for the application details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
@@ -24,3 +24,8 @@
       padding-left: 10px
     td
       padding-top: 5px
+    tr
+      $color: #f2f4f5
+      border-top: dashed $color 1px
+      &:last-of-type
+        border-bottom: dashed $color 1px
