--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details_history.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details_history.jade
@@ -1,25 +1,22 @@
-div(ng-show="history")
+div
   h2 History
-  div
-    div
-      table
-        thead
-          tr
-            th Revision
-            th Timestamp
-            th Username
-            th Comment
-            th
-        tbody
-          tr(x-ng-repeat="historyItem in history")
-            td
-              span {{historyItem.revisionId}}
-            td
-              span {{historyItem.timestamp | date:'medium'}}
-            td
-              span {{historyItem.username}}
-            td
-              span {{historyItem.usercomment}}
-            td
-              i.fa.fa-edit(x-ng-click="showHistoricApplication(historyItem)")
-  button.orange(x-ng-click="closeHistory()") Close
+  table
+    thead
+      tr
+        th Revision
+        th Timestamp
+        th Username
+        th Comment
+        th
+    tbody
+      tr(x-ng-repeat="historyItem in history")
+        td
+          span {{historyItem.revisionId}}
+        td
+          span {{historyItem.timestamp | date:'medium'}}
+        td
+          span {{historyItem.username}}
+        td
+          span {{historyItem.usercomment}}
+        td
+          i.fa.fa-history(x-ng-click="showHistoricApplication(historyItem)")
