--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_checkbox.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_checkbox.sass
@@ -5,8 +5,16 @@ i[data-tribe-checkbox]
     $size: 20px
     height: $size
     width: $size
-    border: solid black 1px
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
+    $color: #464748
+    border: solid $color 1px
+    > div
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-items: center
+      width: 100%
+      height: 100%
+    > div.true
+      background-color: $color
+      i
+        color: $app-white
