--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_query_input.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_query_input.sass
@@ -1,6 +1,6 @@
 @import "variables"
 
-i[data-app-endpoints-query-input]
+div[data-app-endpoints-query-input]
   font-style: normal
   $color: #e3e3e3
   $transparent: transparentize($color, 0.8) !important
