--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
@@ -3,5 +3,5 @@ div
     div.img
     span Services found
     span ({{total}})
-  i(data-app-endpoints-query-input)
-  i(data-app-endpoints-header-create-btn, data-endpoints="endpoints")
+  div(data-app-endpoints-query-input)
+  div(data-app-endpoints-header-create-btn, data-endpoints="endpoints")
