REG-302 diff tool in app details

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details_history.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details_history.sass
@@ -16,3 +16,14 @@ div[data-app-application-details-history]
           width: 30px
           i
             font-size: 18px
+    button
+      margin: 20px 10px 20px 0
+      background-color: #f0f0f0 !important
+      $color: #464748
+      border: solid $color 1px
+      border-radius: 3px
+      color: $app-black
+      &[disabled]
+        color: $color
+      &:hover
+        background-color: #f0f0f0 !important
