--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details_history.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details_history.jade
@@ -3,12 +3,15 @@ div
   table
     thead
       tr
+        th &nbsp;
         th Revision
         th Timestamp
         th Username
         th
     tbody
       tr(x-ng-repeat="historyItem in history")
+        td
+          i(data-tribe-checkbox, data-value="historyItem.$ui.selected", data-change="onHistorySelect(historyItem)")
         td
           span {{historyItem.revisionId}}
         td
@@ -17,3 +20,7 @@ div
           span {{historyItem.username}}
         td
           i.fa.fa-history(x-ng-click="showHistoricApplication(historyItem)")
+  button(x-ng-click="doDiff()", ng-disabled="selected.length !== 2 || showDiff") Show Difference
+  div(data-tribe-diff, x-ng-show="showDiff && selected.length == 2", data-value-a="valueA", data-value-b="valueB")
+  button(x-ng-click="doDiff()", x-ng-show="showDiff") Hide Diff
+  button(x-ng-click="saveMerge()", x-ng-show="showDiff") Save left pane as endpoint
