[REG-313][REG-314][REG-315] Unified Save & Create button to a single Save button. Hide Create Endpoint button on the application details page if it is not persisted yet.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -8,13 +8,10 @@ div
       i.fa.fa-chevron-right
       span(x-ng-if="historyItem") Revision {{historyItem.revisionId}} by {{historyItem.username}} created on {{historyItem.timestamp | date:'medium'}}
     .buttons
-      .save(x-ng-if="endpointLink" x-ng-click="save()")
+      .save(x-ng-click="save()")
         i.fa.fa-floppy-o
         span Save
-      .create-endpoint(x-ng-if="endpointsLink" x-ng-click="create()")
-        i.fa.fa-plus
-        span Create Endpoint
-      .history
+      .history(x-ng-if="historyLink")
         i.fa.fa-history
         span Show History
       .delete(data-tribe-confirm-btn, data-callback="delete", data-icon="trash", data-message="Are you sure you want to delete this endpoint?", x-ng-if="endpointLink", data-label="Delete Endpoint")
