REG-138 hice commit button if invalid value

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -10,4 +10,5 @@ div(tabindex=0, title="Click to edit")
         data-version="version",
         data-active="fieldDirty",
         data-on-confirm="onCommit()",
-        data-on-cancel="onCancel()")
+        data-on-cancel="onCancel()",
+        data-valid-value="valid")
