--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -2,7 +2,7 @@ div
   .title
     h1
       div(data-tribe-singleselect, data-get-option-text="toUppercase", data-available-options="[{text:'DELETE', value:'delete'}, {text:'HEAD', value:'head'}, {text:'GET', value:'get'}, {text:'OPTIONS', value:'options'}, {text:'POST', value:'post'}, {text:'PUT', value:'put'}, {text:'PATCH', value:'patch'}]", data-selected-option="endpoint.httpMethod")
-      div(data-tribe-text, data-regex='^[/[a-zA-Z0-9]+]*', data-value="endpoint.path", data-placeholder="Path")
+      div(data-tribe-text, data-regex='^[/[a-zA-Z0-9:]+]*', data-value="endpoint.path", data-placeholder="Path")
   h2 Description
   div(data-tribe-markdown, data-value="endpoint.operation.description")
   div(data-app-endpoints-details-see, data-endpoint="endpoint")
