--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_field_actions.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_field_actions.jade
@@ -1,5 +1,5 @@
 .tribe-field-actions-body.floating-menu
-  div(ng-click="confirm()")
+  div(ng-click="confirm()", ng-class="{disabled: validValue !== undefined && validValue === false}")
     i.fa.fa-check
   div(ng-click="cancel()")
     i.fa.fa-remove
