REG-275 fit logo

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_page_login.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_page_login.sass
@@ -54,14 +54,14 @@ div.app-login
     flex-direction: column
     align-items: center
     justify-content: center
-    width: 450px
+    max-width: 450px
     > div.img
       background: url("../images/logo-header-login.svg") center no-repeat
       background-size: contain
       max-width: 600px
       width: 100%
       height: 100px
-      margin-bottom: 20px
+      margin: 0 0 20px 0
     > div.fields
       width: 100%
       display: flex
