REG-312 title updated

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
@@ -1,8 +1,8 @@
 header
   a(href=".")
-    div.img(title="Registry")
+    div.img(title="Tribestream API Registry")
   div
-    span Registry
+    span Tribestream API Registry
   div
     span(app-logged-in) {{user}}
     i(app-logout).fa.fa-sign-out
