--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -1,7 +1,7 @@
-div(tabindex=0, title="Click to edit")
+div(tabindex=0, title="{{title}}")
     div
         .text
-            input(type="{{type ? type : 'text'}}", x-ng-keyup="keyEntered($event);", x-ng-model="value", ng-pattern="regex")
+            input(type="{{type ? type : 'text'}}", x-ng-keyup="keyEntered($event);", x-ng-model="value")
             span(x-ng-if="value") {{value}}
             span.empty(x-ng-if="!value") {{placeholder ? placeholder : Empty}}
         .edit-icon
