REG-340 show tip

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -82,6 +82,7 @@ div.tribe-add-btn
 @import "component_confirm_btn"
 @import "component_diff"
 @import "component_checkbox"
+@import "component_tip"
 
 @import "app_header"
 @import "app_footer"
