REG-138 updated endpoint path tip and regex

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -80,3 +80,9 @@ div[data-app-endpoints-details-header]
         font-weight: $app-font-weight-h2 !important
         font-size: $app-font-size-h2
         color: $text-color
+
+div.endpoint-details-path-tip
+  p
+    margin: 0
+  ul,li
+    margin-bottom: 0
