--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_tip.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_tip.sass
@@ -14,10 +14,9 @@
     margin-left: 5px
   div.message
     background-color: $color
-    padding: 5px 8px
-    i
-      margin-right: 5px
-    span, i
+    > div
+      padding: 10px 15px
+    *
       color: $app-white
 
 
