--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -12,4 +12,4 @@ div(tabindex=0, title="{{title}}")
         data-on-confirm="onCommit()",
         data-on-cancel="onCancel()",
         data-valid-value="valid")
-    div(data-tribe-tip, data-message="Invalid Pattern", data-visible="(valid === false)")
+    div(data-tribe-tip, data-message="{{regexTip}}", data-visible="(valid === false)")
