--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_tip.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_tip.jade
@@ -1,5 +1,4 @@
 div(x-ng-if="visible")
     .arrow
     .message
-        i.fa.fa-info
-        span {{message}}
+        div(x-ng-bind-html="message | tribeHtml")
