REG-345 using tribe-text component

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_text.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_text.sass
@@ -3,6 +3,7 @@
 [data-tribe-text]
   display: inline-block
   border: solid transparent 1px
+  font-style: normal
   div.edit-icon
     opacity: 0
     display: flex
