--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
@@ -7,6 +7,6 @@ div
     li(x-ng-repeat="see in endpoint.operation['x-tribestream-api-registry'].sees | orderBy:['seeOrder', 'title']")
       a(ng-if="see.href && see.href.trim() !== ''", ng-href="{{see.href}}", target="_blank")
         i.fa.fa-link
-      i(data-tribe-editable-text, data-adjust="false", data-empty-text="enter link here", data-value="see.href")
+      i(data-tribe-text, data-placeholder="enter link here", data-value="see.href")
       div(x-ng-click="removeLink(see);")
         i.fa.fa-trash
