REG-350 disable save btn until all the mandatory fields are set

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
@@ -56,6 +56,11 @@ div[data-app-endpoints-details]
             font-size: 13px
           &:hover
             cursor: pointer
+          &[disabled]
+            > *, > a > span, > div .trigger > *
+              color: lighten($color, 50%)
+            &:hover
+              cursor: default
 
     // body
     > div:last-of-type
