--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -8,7 +8,7 @@ div
       i.fa.fa-chevron-right
       span(x-ng-if="historyItem") Revision {{historyItem.revisionId}} by {{historyItem.username}} created on {{historyItem.timestamp | date:'medium'}}
     .buttons
-      .save(x-ng-click="save()")
+      .save(x-ng-disabled="!endpoint.httpMethod || !endpoint.path || !endpoint.path.trim()", x-ng-click="!endpoint.httpMethod || !endpoint.path || !endpoint.path.trim() || save()")
         i.fa.fa-floppy-o
         span Save
       .history(x-ng-if="historyLink")
