REG-342 show application version in the endpoint details page making it consistent with the application details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -4,7 +4,7 @@ div
       a(href=".")
         i.fa.fa-home
       i.fa.fa-chevron-right
-      a(x-ng-href="application/{{application.humanReadableName}}") {{application.swagger.info.title}}
+      a(x-ng-href="application/{{application.humanReadableName}}") {{application.swagger.info.title}} {{application.swagger.info.version}}
       i.fa.fa-chevron-right
       span(x-ng-if="historyItem") Revision {{historyItem.revisionId}} by {{historyItem.username}} created on {{historyItem.timestamp | date:'medium'}}
     .buttons
