--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -5,7 +5,7 @@ div
         a(href=".")
           i.fa.fa-home
         i.fa.fa-chevron-right
-        a(x-ng-href="application/{{applicationName}}?version={{swagger.info.version}}") {{swagger.info.title}} {{swagger.info.version}}
+        a(x-ng-if="applicationLink", x-ng-href="application/{{applicationName}}?version={{swagger.info.version}}") {{swagger.info.title}} {{swagger.info.version}}
       .buttons
         .save(x-ng-click="save()")
           i.fa.fa-floppy-o
