REG-339 add placeholder property to component and use 'Description' placeholder in the application details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -23,7 +23,7 @@ div
         h1
           div(data-tribe-text, data-value="swagger.info.title", data-placeholder="Application Name")
           div(data-tribe-text, data-value="swagger.info.version", data-placeholder="Version")
-        div(data-tribe-markdown, data-value="swagger.info.description")
+        div(data-tribe-markdown, data-value="swagger.info.description", data-placeholder="Description")
         .see(x-ng-if="details.sees.length")
           span See:
           div
