--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -113,6 +113,10 @@ div[data-tribe-markdown]
       border-color: $app-input-border-color
       > div:last-of-type
         border-left: solid $app-input-border-color 1px
+  div.preview > div.empty
+    span
+      font-style: italic
+      color: $app-input-border-color
   div.preview > div[x-ng-bind-html], div.editor-preview
     max-width: 100%
     @include code-style
