- fix select field change bug - new disableActions attribute

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
@@ -22,7 +22,7 @@ div(tabindex=0)
     )
     div(data-tribe-field-actions,
         data-version="version",
-        data-active="fieldDirty",
+        data-active="fieldDirty && !disableActions",
         data-on-confirm="onCommit()",
         data-on-cancel="onCancel()"
     )
