REG-358 auto show options in multiselect

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -74,6 +74,7 @@ div[data-tribe-multiselect-selected]
 
 div.tribe-data-tribe-multiselect-available-body
   min-width: 300px
+  z-index: 4000
   .opts
     padding: 0
     > div
