--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -17,7 +17,7 @@ div
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="Request formats")
         span Request formats
-        div(data-tribe-multiselect, data-available-options="requestFormatsOptions", data-selected-options="endpoint.operation.consumes")
+        div(data-tribe-multiselect, data-auto-show-options="true" data-available-options="requestFormatsOptions", data-selected-options="endpoint.operation.consumes")
       div(data-submenu="true", app-endpoints-details-toc-anchor="Response formats")
         span Response formats
         div(data-tribe-multiselect, data-available-options="responseFormatsOptions", data-selected-options="endpoint.operation.produces")
