--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -19,7 +19,8 @@ div(tabindex=0)
         data-available-options="availableOptions",
         data-input-text="inputText",
         data-new-label="{{newLabel}}",
-        data-get-option-text="getOptionText"
+        data-get-option-text="getOptionText",
+        data-version="version"
     )
     div(data-tribe-field-actions,
         data-version="version",
